# nix-config

./: .gitignore  .sops.yaml  README.md  flake.nix  yuzu-builder.nix  yuzu-patch.diff  yuzu-sources.nix
dev-shells/go_bazel/: default.nix
dev-shells/python_django_maps/: pyproject.toml
dev-shells/python_joycond_cemuhook/: default.nix  pyproject.toml
dev-shells/python_msdoc/: default.nix
dev-shells/python_pyramid/: default.nix  pyproject.toml
dev-shells/python_tensorflow_cuda/: default.nix
dev-shells/python_torch/: default.nix
dev-shells/uv_fhs/: default.nix
home-configs/beast/: default.nix  username
home-configs/fox/: default.nix
home-configs/pixelbook/: default.nix
home-configs/serenity/: default.nix
home-configs/test/: default.nix  username
home-modules/: empty.nix
home-profiles/: 3d_printing.nix  ai-gui.nix  bash.nix  common.nix  dev.nix  fonts.nix  games.nix  gui-common.nix  hyprland.nix  jupyterlab.nix  keymap_backtick.xkb  neovim.nix  nixgl-sway.nix  os-other-linux.nix  sway.nix  swaync.nix  syncthing.nix  three_d_printing.nix  tmux.nix  vscode-web.nix  wayland.nix
home-profiles/neovim/: default.nix  init.lua
home-roles/: base.nix  default.nix  desktop.nix  virtual-machine.nix
hosts/beast/: default.nix
lib/: attrs.nix  configs.nix  default.nix  homes.nix  modules.nix
mixins/: sway.nix
nixos-configs/beast/: acme-default.nix  bootstrap-configuration.nix  bootstrap-hardware-configuration.nix  default.nix  hardware-configuration.nix
nixos-configs/fox/: default.nix
nixos-configs/serenity/: default.nix  disk-config.nix  hardware-configuration.nix
nixos-profiles/: ai.nix  cachix-cuda.nix  cachix-devenv.nix  cachix-nixpkgs-wayland.nix  common.nix  docker.nix  games.nix  host-reverse-proxy.nix  prometheus.nix  sound.nix  ttyd.nix  virtualbox.nix  web-servers.nix
nixos-roles/: base.nix  desktop.nix
overlays/: default.nix
secrets/: fox.yaml  secrets.yaml  serenity.yaml
